--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>BreezyCV - Resume / CV / vCard Template</title>
+    <title>Reza Mandala | Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="BreezyCV - Resume / CV / vCard Template" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
@@ -45,8 +45,8 @@
                 <img src="img/main_photo.jpg" alt="Alex Smith">
               </div>
               <div class="header-titles">
-                <h2>Alex Smith</h2>
-                <h4>Web Designer</h4>
+                <h2>Reza Mandala</h2>
+                <h4>Web Developer</h4>
               </div>
             </div>
 
@@ -97,10 +97,6 @@
               </ul>
             </div>
 
-            <div class="header-buttons">
-              <a href="#" target="_blank" class="btn btn-primary">Download CV</a>
-            </div>
-
             <div class="copyrights">© 2020 All rights reserved.</div>
           </header>
 
@@ -128,10 +124,10 @@
                     <div class="row">
                       <div class="col-sm-12 col-md-12 col-lg-12">
                         <div class="title-block">
-                          <h2>Alex Smith</h2>
+                          <h2>Reza Mandala</h2>
                           <div class="owl-carousel text-rotation">                                    
                             <div class="item">
-                              <div class="sp-subtitle">Web Designer</div>
+                              <div class="sp-subtitle">Web Developer</div>
                             </div>
                             
                             <div class="item">
@@ -164,27 +160,27 @@
                         <ul>
                           <li>
                             <span class="title">Age</span>
-                            <span class="value">32</span>
+                            <span class="value">25</span>
                           </li>
 
                           <li>
                             <span class="title">Residence</span>
-                            <span class="value">USA</span>
+                            <span class="value">Sukoharjo</span>
                           </li>
 
                           <li>
                             <span class="title">Address</span>
-                            <span class="value">88 Some Street, Some Town</span>
+                            <span class="value">Grogol, Sukoharjo</span>
                           </li>
 
                           <li>
                             <span class="title">e-mail</span>
-                            <span class="value">email@example.com</span>
+                            <span class="value">contactrezamandala@gmail.com</span>
                           </li>
 
                           <li>
                             <span class="title">Phone</span>
-                            <span class="value">+0123 123 456 789</span>
+                            <span class="value">+68 899 535 XXX</span>
                           </li>
                         </ul>
                       </div>
