--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -42,11 +42,11 @@
           <header id="site_header" class="header mobile-menu-hide">
             <div class="header-content">
               <div class="header-photo">
-                <img src="img/main_photo.jpg" alt="Alex Smith">
+                <img src="img/main_photo.jpg" alt="Reza Mandala">
               </div>
               <div class="header-titles">
-                <h2>Alex Smith</h2>
-                <h4>Web Designer</h4>
+                <h2>Reza Mandala</h2>
+                <h4>Web Developer</h4>
               </div>
             </div>
 
@@ -89,10 +89,6 @@
                 <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
               </ul>
-            </div>
-
-            <div class="header-buttons">
-              <a href="#" target="_blank" class="btn btn-primary">Download CV</a>
             </div>
           
           </header>
