--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="BreezyCV - Resume / CV / vCard Template" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
     <meta name="author" content="lmpixels" />
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 
     <link rel="stylesheet" href="css/reset.css" type="text/css">
