--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>BreezyCV - Resume / CV / vCard Template</title>
+    <title>Reza Mandala | Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="BreezyCV - Resume / CV / vCard Template" />
+    <meta name="description" content="Reza Mandala | Web Developer" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, portfolio" />
     <meta name="author" content="lmpixels" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
