--- a/portfolio/bola/index.html
+++ b/portfolio/bola/index.html
@@ -518,7 +518,7 @@
 						</div>
 						<div class="item-body">
 							<div class="name">
-								CHRISTIAN RONALDOEL
+								GREG NWOKOLO
 							</div>
 							<div class="position">
 								<span class="cf">CF</span> Forwarder
@@ -532,10 +532,10 @@
 						</div>
 						<div class="item-body">
 							<div class="name">
-								DAVID BECKMAN
+								M. ISA
 							</div>
 							<div class="position">
-								<span class="rmf">RMF</span> Right Middle Forward
+								<span class="cf">CF</span> Forwarder
 							</div>
 						</div>
 					</div>
