--- a/portfolio/bola/index.html
+++ b/portfolio/bola/index.html
@@ -14,7 +14,7 @@
 	<!-- ==============================================
 	Favicons
 	=============================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link href="images/favicon.png" rel="shortcut icon">
 	<link rel="apple-touch-icon" href="images/mini-logo.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
@@ -444,7 +444,7 @@
 				<div class="col-sm-12 col-md-8 col-md-offset-2">
 					<!-- 16:9 aspect ratio -->
 					<div class="embed-responsive embed-responsive-16by9">
-					  <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/8F5V7RkZDbw"></iframe>
+					  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5flc6xlSR-M"></iframe>
 					</div>
 
 				</div>
@@ -472,7 +472,7 @@
 				
 					<div class="item player-item">
 						<div class="gambar">
-							<img src="http://placehold.it/390x585" alt="" class="img-responsive">
+							<img src="images/player1.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="item-body">
 							<div class="name">
@@ -486,7 +486,21 @@
 
 					<div class="item player-item">
 						<div class="gambar">
-							<img src="http://placehold.it/390x585" alt="" class="img-responsive">
+							<img src="images/player2.jpg" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								WAHYU TRI NUGROHO
+							</div>
+							<div class="position">
+								<span class="gk">GK</span> Goal Keeper
+							</div>
+						</div>
+					</div>
+
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="images/player3.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="item-body">
 							<div class="name">
@@ -500,11 +514,11 @@
 
 					<div class="item player-item">
 						<div class="gambar">
-							<img src="http://placehold.it/390x585" alt="" class="img-responsive">
+							<img src="images/player4.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="item-body">
 							<div class="name">
-								JOKO SUSILO
+								BRUNO CASIMIR
 							</div>
 							<div class="position">
 								<span class="cb">CB</span> Center Back
@@ -514,11 +528,53 @@
 
 					<div class="item player-item">
 						<div class="gambar">
-							<img src="http://placehold.it/390x585" alt="" class="img-responsive">
+							<img src="images/player5.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="item-body">
 							<div class="name">
-								GREG NWOKOLO
+								IMAN BUDI HERNANDI
+							</div>
+							<div class="position">
+								<span class="cmf">CMF</span> Midfielder
+							</div>
+						</div>
+					</div>
+
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="images/player6.jpg" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								SYAHRONI
+							</div>
+							<div class="position">
+								<span class="cmf">CMF</span> Midfielder
+							</div>
+						</div>
+					</div>
+
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="images/player7.jpg" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								M. TAUFIK
+							</div>
+							<div class="position">
+								<span class="cmf">CMF</span> Midfielder
+							</div>
+						</div>
+					</div>
+
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="images/player8.jpg" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								HAPIDIN
 							</div>
 							<div class="position">
 								<span class="cf">CF</span> Forwarder
@@ -528,7 +584,21 @@
 
 					<div class="item player-item">
 						<div class="gambar">
-							<img src="http://placehold.it/390x585" alt="" class="img-responsive">
+							<img src="images/player9.jpg" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								AZKA FAUZI
+							</div>
+							<div class="position">
+								<span class="cf">CF</span> Forwarder
+							</div>
+						</div>
+					</div>
+
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="images/player10.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="item-body">
 							<div class="name">
@@ -542,11 +612,11 @@
 
 					<div class="item player-item">
 						<div class="gambar">
-							<img src="http://placehold.it/390x585" alt="" class="img-responsive">
+							<img src="images/player11.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="item-body">
 							<div class="name">
-								CHRISTIAN RONALDOEL
+								GREG NWOKOLO
 							</div>
 							<div class="position">
 								<span class="cf">CF</span> Forwarder
@@ -580,8 +650,8 @@
 			<div class="row popup-gallery">
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="http://placehold.it/768x510.jpg" title="Gallery #1">
-							<img src="http://placehold.it/768x510" alt="" class="img-responsive" />
+						<a href="images/galeri.jpg" title="Gallery #1">
+							<img src="images/galeri.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -592,8 +662,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="http://placehold.it/768x510" title="Gallery #2">
-							<img src="http://placehold.it/768x510" alt="" class="img-responsive" />
+						<a href="images/galeri.jpg" title="Gallery #2">
+							<img src="images/galeri.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -604,8 +674,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="http://placehold.it/768x510" title="Gallery #3">
-							<img src="http://placehold.it/768x510" alt="" class="img-responsive" />
+						<a href="images/galeri.jpg" title="Gallery #3">
+							<img src="images/galeri.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -616,8 +686,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="http://placehold.it/768x510" title="Gallery #4">
-							<img src="http://placehold.it/768x510" alt="" class="img-responsive" />
+						<a href="images/galeri.jpg" title="Gallery #4">
+							<img src="images/galeri.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -628,8 +698,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="http://placehold.it/768x510" title="Gallery #5">
-							<img src="http://placehold.it/768x510" alt="" class="img-responsive" />
+						<a href="images/galeri.jpg" title="Gallery #5">
+							<img src="images/galeri.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -640,8 +710,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="http://placehold.it/768x510" title="Gallery #6">
-							<img src="http://placehold.it/768x510" alt="" class="img-responsive" />
+						<a href="images/galeri.jpg" title="Gallery #6">
+							<img src="images/galeri.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -652,8 +722,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="http://placehold.it/768x510" title="Gallery #1">
-							<img src="http://placehold.it/768x510" alt="" class="img-responsive" />
+						<a href="images/galeri.jpg" title="Gallery #1">
+							<img src="images/galeri.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -664,8 +734,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="http://placehold.it/768x510" title="Gallery #1">
-							<img src="http://placehold.it/768x510" alt="" class="img-responsive" />
+						<a href="images/galeri.jpg" title="Gallery #1">
+							<img src="images/galeri.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
