--- a/portfolio/bola/support.html
+++ b/portfolio/bola/support.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pro Soccer - Football Club Template</title>
-    <meta name="description" content="Pro Soccer - Football Club Template. It is built using bootstrap 3.3.2 framework, works totally responsive, easy to customise, well commented codes and seo friendly.">
+    <title>PERSIS Solo - Laskar Sambernyawa</title>
+    <meta name="description" content="PERSIS Solo - Laskar Sambernyawa. It is built using bootstrap 3.3.2 framework, works totally responsive, easy to customise, well commented codes and seo friendly.">
     <meta name="keywords" content="prosoccer, football, club, soccer, bootstrap">
     <meta name="author" content="rudhisasmito.com"> 
 	
 	<!-- ==============================================
 	Favicons
 	=============================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link href="images/favicon.png" rel="shortcut icon">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
@@ -89,7 +89,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html"><img src="http://placehold.it/150x150" alt="" /></a>
+				<a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="" /></a>
 				
 			</div>
 			<nav class="navbar-collapse collapse">
