--- a/portfolio/bola/index.html
+++ b/portfolio/bola/index.html
@@ -64,7 +64,7 @@
 						<div class="info">
 							<h3>News : </h3>
 							<div class="info-item">
-								<div>PERSIS Solo resmi mendatangkan Egy Maulana Vikri.</div>
+								<div>PERSIS Solo dikabarkan tertarik untuk mendatangkan Egy.</div>
 								<div>Tiket Derby Mataram terjual habis!</div>
 								<div>Fly Emirates berminat untuk sponsori PERSIS Solo.</div>
 							</div>
@@ -476,7 +476,7 @@
 						</div>
 						<div class="item-body">
 							<div class="name">
-								SENDRI JOHANSYSAH
+								SENDRI JOHANSYAH
 							</div>
 							<div class="position">
 								<span class="gk">GK</span> Goal Keeper
@@ -801,7 +801,7 @@
 						<div class="item-body">
 							<div class="description">
 								<p class="lead">
-									<a href="news-single.html" title="">Fly Emirates berminat untuk menyeponsori Laskar Sambernyawa selama 5 tahun.</a>
+									<a href="news-single.html" title="">Fly Emirates berminat untuk sponsori Laskar Sambernyawa selama 5 tahun.</a>
 								</p>
 								<a href="news-single.html" title="" class="readmore">Read More</a>
 								
@@ -899,7 +899,15 @@
 							<div class="footer-title">
 								<h4>ABOUT CLUB</h4>
 							</div>
-							<p>This template is a micro niche for business categories, namely PERSIS business. there was an excess of this template is using HTML/CSS. Condimentum aliquam, mollit magna velit nec, tempor cursus vitae sit aliquet neque purus. Ultrices lacus proin conubia dictum tempus, tempor pede vitae faucibus</p>
+							<p>Persatuan Sepak bola Indonesia Surakarta 
+								(disingkat Persis Surakarta) adalah salah 
+								satu klub sepak bola di Indonesia asal 
+								Kota Surakarta/Kota Solo. 8 November 1923 
+								jadi tanggal lahir klub ini. klub ini awalnya 
+								mengguna nama Vorstenlandsche Voetbal Bond (VVB), 
+								yang didirikan leh Sastrosaksono (tokoh dari 
+								Klub Mars) serta R. Ng. Reksodiprojo dan Sutarman 
+								dari Klub Romeo.</p>
 							<div class="footer-sosmed">
 								<a href="#" title="">
 									<div class="item">
@@ -932,7 +940,7 @@
 							</div>
 							<div class="footer-blog-item">
 								<div class="footer-blog-lead">
-									<a href="blog-1.html" title="">Consectetuer porttitor feugiat vestibulum sit feugiat.</a>
+									<a href="blog-1.html" title="">PERSIS Solo dikabarkan tertarik untuk mendatangkan Egy Maulana Vikri.</a>
 								</div>
 								<div class="footer-blog-date">
 									May 29, 2025
@@ -940,7 +948,7 @@
 							</div>
 							<div class="footer-blog-item">
 								<div class="footer-blog-lead">
-									<a href="blog-1.html" title="">vestibulum sit feugiat voluptates dui eros libero.</a>
+									<a href="blog-1.html" title="">Tiket pertandingan Derby Mataram telah ludes terjual.</a>
 								</div>
 								<div class="footer-blog-date">
 									May 29, 2025
