--- a/portfolio/bola/privacy.html
+++ b/portfolio/bola/privacy.html
@@ -64,9 +64,9 @@
 						<div class="info">
 							<h3>News : </h3>
 							<div class="info-item">
-								<div>Chelsoa reject De Bruyno could get the last laugh.</div>
-								<div>Breaking down Bayern's summer transfer plans.</div>
-								<div>Fellaino and the players who cost more than Pigbo.</div>
+								<div>PERSIS Solo dikabarkan tertarik untuk mendatangkan Egy.</div>
+								<div>Tiket Derby Mataram terjual habis!</div>
+								<div>Fly Emirates berminat untuk sponsori PERSIS Solo.</div>
 							</div>
 						</div>
 					</div>
@@ -156,7 +156,15 @@
 							<div class="footer-title">
 								<h4>ABOUT CLUB</h4>
 							</div>
-							<p>This template is a micro niche for business categories, namely Pro Soccer business. there was an excess of this template is using HTML/CSS. Condimentum aliquam, mollit magna velit nec, tempor cursus vitae sit aliquet neque purus. Ultrices lacus proin conubia dictum tempus, tempor pede vitae faucibus</p>
+							<p>Persatuan Sepak bola Indonesia Surakarta 
+								(disingkat Persis Surakarta) adalah salah 
+								satu klub sepak bola di Indonesia asal 
+								Kota Surakarta/Kota Solo. 8 November 1923 
+								jadi tanggal lahir klub ini. klub ini awalnya 
+								mengguna nama Vorstenlandsche Voetbal Bond (VVB), 
+								yang didirikan leh Sastrosaksono (tokoh dari 
+								Klub Mars) serta R. Ng. Reksodiprojo dan Sutarman 
+								dari Klub Romeo.</p>
 							<div class="footer-sosmed">
 								<a href="#" title="">
 									<div class="item">
@@ -189,7 +197,7 @@
 							</div>
 							<div class="footer-blog-item">
 								<div class="footer-blog-lead">
-									<a href="blog-1.html" title="">Consectetuer porttitor feugiat vestibulum sit feugiat.</a>
+									<a href="blog-1.html" title="">PERSIS Solo dikabarkan tertarik untuk mendatangkan Egy Maulana Vikri.</a>
 								</div>
 								<div class="footer-blog-date">
 									May 29, 2015
@@ -197,7 +205,7 @@
 							</div>
 							<div class="footer-blog-item">
 								<div class="footer-blog-lead">
-									<a href="blog-1.html" title="">vestibulum sit feugiat voluptates dui eros libero.</a>
+									<a href="blog-1.html" title="">Tiket pertandingan Derby Mataram telah ludes terjual.</a>
 								</div>
 								<div class="footer-blog-date">
 									May 29, 2015
@@ -257,7 +265,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<p class="ftex">&copy; 2015 Pro Soccer by Rudhi Sasmito - All Rights Reserved</p> 
+						<p class="ftex">&copy; 2021 PERSIS Solo - All Rights Reserved</p> 
 					</div>
 				</div>
 			</div>
