--- a/portfolio/bola/contact.html
+++ b/portfolio/bola/contact.html
@@ -9,7 +9,7 @@
     <title>PERSIS Solo - Laskar Sambernyawa</title>
     <meta name="description" content="PERSIS Solo - Laskar Sambernyawa. It is built using bootstrap 3.3.2 framework, works totally responsive, easy to customise, well commented codes and seo friendly.">
     <meta name="keywords" content="prosoccer, football, club, soccer, bootstrap">
-    <meta name="author" content="rudhisasmito.com"> 
+    <meta name="author" content="persissolo.id"> 
 	
 	<!-- ==============================================
 	Favicons
@@ -143,7 +143,7 @@
 					<div class="maps-wraper">
 						<div id="cd-zoom-in"></div>
 						<div id="cd-zoom-out"></div>
-						<div id="maps" class="maps" data-lat="-7.452278" data-lng="112.708992" >
+						<div id="maps" class="maps" data-lat="-7.5764107" data-lng="110.7988924" >
 							
 						</div>
 					</div>
