--- a/portfolio/bola/index.html
+++ b/portfolio/bola/index.html
@@ -650,8 +650,8 @@
 			<div class="row popup-gallery">
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="images/galeri.jpg" title="Gallery #1">
-							<img src="images/galeri.jpg" alt="" class="img-responsive" />
+						<a href="images/galery1.jpg" title="Gallery #1">
+							<img src="images/galery1.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -662,8 +662,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="images/galeri.jpg" title="Gallery #2">
-							<img src="images/galeri.jpg" alt="" class="img-responsive" />
+						<a href="images/galery2.jpg" title="Gallery #2">
+							<img src="images/galery2.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -674,8 +674,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="images/galeri.jpg" title="Gallery #3">
-							<img src="images/galeri.jpg" alt="" class="img-responsive" />
+						<a href="images/galery3.jpg" title="Gallery #3">
+							<img src="images/galery3.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -686,8 +686,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="images/galeri.jpg" title="Gallery #4">
-							<img src="images/galeri.jpg" alt="" class="img-responsive" />
+						<a href="images/galery4.jpg" title="Gallery #4">
+							<img src="images/galery4.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -698,8 +698,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="images/galeri.jpg" title="Gallery #5">
-							<img src="images/galeri.jpg" alt="" class="img-responsive" />
+						<a href="images/galery5.jpg" title="Gallery #5">
+							<img src="images/galery5.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -710,8 +710,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="images/galeri.jpg" title="Gallery #6">
-							<img src="images/galeri.jpg" alt="" class="img-responsive" />
+						<a href="images/galery6.jpg" title="Gallery #6">
+							<img src="images/galery6.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -722,8 +722,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="images/galeri.jpg" title="Gallery #1">
-							<img src="images/galeri.jpg" alt="" class="img-responsive" />
+						<a href="images/galery7.jpg" title="Gallery #1">
+							<img src="images/galery7.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
@@ -734,8 +734,8 @@
 				</div>
 				<div class="col-xs-4 col-sm-3 col-md-3">
 					<div class="w-item">
-						<a href="images/galeri.jpg" title="Gallery #1">
-							<img src="images/galeri.jpg" alt="" class="img-responsive" />
+						<a href="images/galery8.jpg" title="Gallery #1">
+							<img src="images/galery8.jpg" alt="" class="img-responsive" />
 							<div class="project-info">
 								<div class="project-icon">
 									<span class="fa fa-search"></span>
