--- a/portfolio/bola/support.html
+++ b/portfolio/bola/support.html
@@ -9,7 +9,7 @@
     <title>PERSIS Solo - Laskar Sambernyawa</title>
     <meta name="description" content="PERSIS Solo - Laskar Sambernyawa. It is built using bootstrap 3.3.2 framework, works totally responsive, easy to customise, well commented codes and seo friendly.">
     <meta name="keywords" content="prosoccer, football, club, soccer, bootstrap">
-    <meta name="author" content="rudhisasmito.com"> 
+    <meta name="author" content="persissolo.id"> 
 	
 	<!-- ==============================================
 	Favicons
